<!--suppress LongLine -->
<resources>
    <string name="app_name">SSH Remote</string>
    <string name="library_name">ssh-client</string>

    <string name="lbl_edit_button">Edit Button</string>
    <string name="lbl_edit_host">Edit Host</string>
    <string name="lbl_edit_command">Edit Command</string>

    <!-- EditButtonFragment -->
    <string name="lbl_button_label">Label</string>
    <string name="lbl_host">Host</string>
    <string name="lbl_command">Command</string>

    <!-- EditHostFragment -->
    <string name="lbl_host_label">Label</string>
    <string name="lbl_hostname_or_ip">Hostname or ip address</string>
    <string name="lbl_port">Port (default is 22)</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>

    <!-- EditCommandFragment -->
    <string name="lbl_command_label">Label</string>
    <string name="lbl_command_line">Command line</string>
    <string name="lbl_sudo">Run with sudo</string>
    <string name="lbl_sudo_use_user_password">sudo uses user password</string>
    <string name="lbl_sudo_password">Sudo password</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_undo">Undo</string>

    <string name="action_export">Export</string>
    <string name="action_import">Import overwriting</string>
    <string name="action_import_append">Import appending</string>

    <string name="button_not_set">(Not Set)</string>
    <string name="lbl_clear">Clear</string>

    <string name="lbl_key_management">Key management</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_edit_button_order">Edit button order</string>
    <string name="lbl_create_debug_report">Create debug report</string>
    <string name="lbl_about">About</string>

    <string name="lbl_total_nr_of_buttons">Number of buttons</string>

    <!-- [VERIFIED] -->
    <string name="error_network_failed_try_again">Check connection and try again</string>
    <!-- [VERIFIED] -->
    <string name="error_network_please_connect">Please connect to the network.</string>
    <string name="error_unknown_host">Unknown host or cannot reach host %s</string>
    <string name="error_to_many_auth">To many authentication attempts: %d</string>
    <string name="error_export_failed">Export failed</string>
    <string name="error_import_failed">Import failed</string>
    <string name="error_save_failed">Save failed</string>
    <!-- Displayed in the command output section. -->
    <string name="error_output_too_large">ERROR: Output too large.</string>


    <string name="lbl_confirm_button_position">Drag and drop buttons into the desired order.</string>
    <string name="lbl_strict_host_key_checking">Strict host key checking</string>

    <string name="vertical">vertical</string>
    <string name="horizontal">horizontal</string>

    <!-- Preference Category -->
    <string name="pc_ui">User Interface</string>
    <string name="pc_ssh">SSH</string>

    <string name="lbl_log_level">Log level</string>
    <string name="lbl_buttons_flow">Buttons flow</string>
    <string name="toggle_output_wrap">Wrap output</string>
    <string name="warning_requires_restart">Please restart the app</string>

    <string-array name="log_levels">
        <item>None</item>
        <item>Fatal errors</item>
        <item>Errors</item>
        <item>Warnings</item>
        <item>Info</item>
        <item>Debug</item>
    </string-array>

    <!-- ListPreference title: UI menu bar at the top of the screen. -->
    <string name="pt_ui_screen_systembars_behavior">Top menu</string>
    <!-- ListPreference title: UI menu bar at the top of the screen.
     Default behaviour is to scroll along with the rest of the screen.
    -->
    <string name="pt_screen_header_scroll">"Let the menu slide away when scrolling</string>
    <!-- ListPreference title: UI menu bar at the top of the screen.
         Stays fixed/visible while scrolling the screen. -->
    <string name="pt_screen_header_fixed">Keep the menu pinned</string>
    <string name="lbl_columns">Columns</string>
    <string name="lbl_rows">Rows</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="button_span">Button span count</string>

    <!-- ListPreference
     Allow the top system-bar/toolbar and bottom system-bar to scroll or not
    -->
    <string-array name="pe_ui_screen_systembars">
        <item>@string/pt_screen_header_scroll</item>
        <item>@string/pt_screen_header_fixed</item>
    </string-array>
    <string-array name="pv_ui_screen_systembars">
        <item>0</item>
        <item>1</item>
    </string-array>

</resources>
