<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pc_ui">

        <!-- SummaryProvider must be set from code. -->
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pe_ui_screen_systembars"
            android:entryValues="@array/pv_ui_screen_systembars"
            android:key="ui.screen.systembars.fixed"
            android:title="@string/pt_ui_screen_systembars_behavior" />

        <SeekBarPreference
            android:defaultValue="8"
            android:icon="@drawable/buttons_alt_24px"
            android:key="global.buttons.amount"
            android:max="24"
            android:title="@string/lbl_total_nr_of_buttons"
            app:min="1"
            app:showSeekBarValue="true" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="global.buttons.flow"
            android:title="@string/lbl_buttons_flow" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="global.buttons.span"
            android:summaryOff="@string/automatic"
            android:summaryOn="@string/manual"
            android:title="@string/button_span" />

        <!-- Title is swapped depending on the above "Buttons flow" setting. -->
        <SeekBarPreference
            android:defaultValue="2"
            android:dependency="global.buttons.span"
            android:key="global.buttons.span.count"
            android:max="6"
            android:title="@string/lbl_columns"
            app:min="1"
            app:showSeekBarValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pc_ssh">

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/vpn_key_24px"
            android:key="global.ssh.strictHostKeyChecking"
            android:title="@string/lbl_strict_host_key_checking" />

        <SeekBarPreference
            android:defaultValue="2"
            android:icon="@drawable/bug_report_24px"
            android:key="global.ssh.log.level"
            android:max="5"
            android:title="@string/lbl_log_level"
            app:min="0" />

    </PreferenceCategory>
</PreferenceScreen>
