<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.hardbacknutter.sshremote.MainActivity">
    <item
        android:id="@id/MENU_SAVE"
        android:icon="@drawable/ic_twotone_save_24"
        android:orderInCategory="10"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <item
        android:id="@id/MENU_IMPORT"
        android:orderInCategory="20"
        android:title="@string/action_import"
        app:showAsAction="never" />

    <item
        android:id="@id/MENU_IMPORT_APPEND"
        android:orderInCategory="30"
        android:title="@string/action_import_append"
        app:showAsAction="never" />

    <item
        android:id="@id/MENU_EXPORT"
        android:orderInCategory="40"
        android:title="@string/action_export"
        app:showAsAction="never" />

</menu>
